# moviebackend

./: Cargo.toml
src/: main.rs
src/authenticate/: handlers.rs  models.rs
src/comments/: handler.rs  mod.rs  models.rs
src/movie/: handlers.rs  mod.rs  models.rs
src/watchlist/: handler.rs  models.rs
